Added instructions to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -26,5 +26,15 @@
                 <li>Vegetables of preference</li>
             </ul>
         </p>
+        <p>
+            <ol>
+                <li>Boil water and cook the lasagna sheets to al dente</li>
+                <li>Lightly season and cook the ground meat in a pot</li>
+                <li>Pour tomato sauce (and any veggies) into the cooked meat and season liberally with all the seasonings to your liking and bring to a simmer</li>
+                <li>In a lasagna tray, begin making the layers of the lasagna: lasagna sheets, tomato sauce, ricotta cheese (and repeat) </li>
+                <li>One final layer is completed, add the mozzarella and parmesan cheese on the top generously.</li>
+                <li>Finally, set oven to 375 degrees Fahrenheit and bake for 20-25 mins.</li>
+            </ol>
+        </p>
     </body>
 </html>
