Fixed hyperlink to poke.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </li>
                 
             <li>
-                <a href="recipes/tunapoke.html">Odin's Lasagna Recipe</a>
+                <a href="recipes/poke.html">Odin's Ahi Tuna Poke Recipe</a>
             </li>
 
             <li>
