EDIT index.html and added smoothie.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </li>
 
             <li>
-                <a href="recipes/lasagna.html">Odin's Lasagna Recipe</a>
+                <a href="recipes/smoothie.html">Odin's Avocado Smoothie Recipe</a>
             </li>
         </ul>
         
